# metagoofil

./: pyproject.toml
src/: metagoofil.py
