[project]
name = "metagoofil"
version = "1.0"
dependencies = [
"google",
"requests",
"argparse",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["data", "src"]


[project.scripts]
metagoofil = "metagoofil:main"